Ping metrics (#23)
* Add /devices/{id}/statistics path to Swagger config

This is in preparation to fetch ping statistics from UNMS. The endpoint
returns A LOT more data, but for now this contains only the minimal set.

* Add ping metrics

This enables fetching device statistics from UNMS, extracting
the ping RTT values from it, and export them back to prometheus.

Since fetching statistics requires talking to another, device-specific
endpoint, the context timeout is increased from 5 to 30s. A future
change should pass the request context from the promhttp endpoint
down to the fetchDeviceData() method, to make the timout depend on
Prometheus' scrape request life cycle.

* Ping metrics: disable by default, add config knob

* Ping metrics: update README

* Make examples in README consistent

* Ping metrics: cleanup dead code

* Ping metrics: add tests for env vars/CLI flags

* Allow usage of dash in metrics option

* Update docs and extend test case
